# bm1880-ai-demo-program

./: README.md
bm1880_nnm_sample/bm1880/: CMakeLists.txt  bm_cquene.cpp  bm_cquene.hpp  bm_link.c  bm_link.h  bm_storage.cpp  bm_storage.hpp  bm_usbtty.cpp  bm_usbtty.hpp  build.sh  ipc_configs.h  ipc_face_detector.cpp  usbttycommon.h
darknet_nnm_sample/1880/: CMakeLists.txt  darknet_server.c
rtsp_fd_fr/: CMakeLists.txt  README.md  VERSION.cmake  build_all.sh  build_hisi.sh  config.h.in  doxygen.conf
rtsp_fd_fr/book/: README.md  SUMMARY.md
rtsp_fd_fr/book/pipeline/: BRANCH.md  COMPONENT.md  CONTEXT.md  EXECUTION.md  PIPELINE.md  SEQUENCE.md  STREAM_CMD_SERVER.md  SWITCH.md
rtsp_fd_fr/cmake/: configure.cmake  dependence.cmake  edge.cmake  fdfr_version.h.in  options.cmake  plc.cmake
rtsp_fd_fr/include/math/: range.hpp
rtsp_fd_fr/include/memory/: bytes.hpp  encoding.hpp
rtsp_fd_fr/include/mp/: boolean.hpp  filter.hpp  function.hpp  optional.hpp  strong_typedef.hpp  tuple.hpp  type_sequence.hpp
rtsp_fd_fr/modules/: CMakeLists.txt
rtsp_fd_fr/modules/3rd/: CMakeLists.txt
rtsp_fd_fr/modules/3rd/include/: json.hpp
rtsp_fd_fr/modules/3rd/tracer/: tracer.cmake  tracer.cpp  tracer.h
rtsp_fd_fr/modules/images/: CMakeLists.txt
rtsp_fd_fr/modules/images/core/include/: cvmat_bgr_image.hpp  generic_image.hpp  image.hpp
rtsp_fd_fr/modules/images/processing/include/: capture_stream.hpp  image_file_source.hpp  image_http_encode.hpp  imshow_sink.hpp  pipe_image_concat.hpp  usb_input.hpp  video_capture_source.hpp
rtsp_fd_fr/modules/images/processing/src/: capture_stream.cpp  image_file_source.cpp  imshow_sink.cpp  usb_input.cpp  video_capture_source.cpp
rtsp_fd_fr/modules/inference/: CMakeLists.txt
rtsp_fd_fr/modules/inference/afs/include/: afs_base.hpp  afs_canny.hpp  afs_classify.hpp  afs_classify_hsv_ycbcr.hpp  afs_cvbg.hpp  afs_cvsharp.hpp  afs_depth.hpp  afs_lbpsvm.hpp  afs_led_controller.hpp  afs_patch.hpp  afs_result.hpp  afs_utils.hpp  antifacespoofing.hpp
rtsp_fd_fr/modules/inference/afs/src/: afs_base.cpp  afs_canny.cpp  afs_classify.cpp  afs_classify_hsv_ycbcr.cpp  afs_cvbg.cpp  afs_cvsharp.cpp  afs_depth.cpp  afs_lbpsvm.cpp  afs_led_controller.cpp  afs_patch.cpp  afs_result.cpp  antifacespoofing.cpp
rtsp_fd_fr/modules/inference/fdfr/include/: annoy_repo.hpp  face_align_pipe.hpp  face_antispoofing_pipe.hpp  face_api.hpp  face_attr_pipe.hpp  face_data_json.hpp  face_impl.hpp  face_pose_pipe.hpp  face_quality_checker.hpp  face_register_pipe.hpp  fdfr.hpp  fdfr_pipe.hpp  fr.hpp  mark_face.hpp  mark_face_attr_sink.hpp  mark_face_sink.hpp
rtsp_fd_fr/modules/inference/fdfr/src/: face_attr_pipe.cpp  face_data_json.cpp  face_impl.cpp  fdfr_pipe.cpp  mark_face.cpp  mark_face_attr_sink.cpp  mark_face_sink.cpp
rtsp_fd_fr/modules/inference/object_detection/include/: object_detection_encode.hpp  object_detection_pipe.hpp  object_detection_visualize.hpp
rtsp_fd_fr/modules/inference/object_detection/src/: object_detection_encode.cpp
rtsp_fd_fr/modules/inference/pose/include/: pose_detection_pipe.hpp
rtsp_fd_fr/modules/io/: CMakeLists.txt
rtsp_fd_fr/modules/io/core/include/: data_pipe.hpp  data_sink.hpp  data_source.hpp  packet.hpp  packet_demux.hpp
rtsp_fd_fr/modules/io/core/src/: file_io.cpp  packet_demux.cpp
rtsp_fd_fr/modules/io/http/include/: http_encode.hpp  http_request_sink.hpp
rtsp_fd_fr/modules/io/http/src/: http_request_sink.cpp
rtsp_fd_fr/modules/io/tty/include/: tty_io.hpp
rtsp_fd_fr/modules/io/tty/src/: tty_io.cpp
rtsp_fd_fr/modules/io/usb/: CMakeLists.txt
rtsp_fd_fr/modules/io/usb/include/: usb_comm.hpp  usb_device.hpp
rtsp_fd_fr/modules/io/usb/src/: usb_comm.cpp
rtsp_fd_fr/modules/pipeline/: CMakeLists.txt
rtsp_fd_fr/modules/pipeline/core/include/: pipe_comp_builder.hpp  pipe_component.hpp  pipe_context.hpp  pipe_dynamic_switch.hpp  pipe_encode.hpp  pipe_executor.hpp  pipe_interface.hpp  pipe_lambda.hpp  pipe_sequence.hpp  pipe_sink.hpp  pipe_source.hpp  pipe_switch.hpp  pipe_vault.hpp  pipeline.hpp  pipeline_ce.hpp  pipeline_core.hpp
rtsp_fd_fr/modules/pipeline/dynamic/include/: component_factory.hpp  pipe_vector_wrap.hpp  pipeline_preset.hpp
rtsp_fd_fr/modules/pipeline/dynamic/src/: component_factory.cpp  (+1 more)
rtsp_fd_fr/modules/service/: CMakeLists.txt
rtsp_fd_fr/modules/utility/: CMakeLists.txt
rtsp_fd_fr/modules/utility/logging/: CMakeLists.txt
rtsp_fd_fr/modules/zktcam/: CMakeLists.txt
rtsp_fd_fr/pipelines/: yolo_host.pl
rtsp_fd_fr/src/edge/: CMakeLists.txt  convert_repo.cpp  headpose_demo.cpp  pipeline_1880_test.cpp  pipeline_antispoofing_conf.json  pipeline_antispoofing_conf_2.json  pipeline_exec.cpp  stream_cmd_server_test.cpp  test_libusb_fdfr.cpp  test_libusb_register.cpp  two_rgb.json
rtsp_fd_fr/src/edge/conf/: identify.json  pipeline_conf.json  pipeline_dual_uvc_conf.json  pipeline_object_detection_conf.json  pipeline_openpose_conf.json  register.json  stream_cmd_server.conf  stream_cmd_server_simple.conf
rtsp_fd_fr/src/edge/test/: CMakeLists.txt  test_image_decode.cpp  test_mtcnn.cpp  test_pipeline_zerocopy.cpp  test_repo.cpp  test_repo_mutation.cpp  test_tinyssh.cpp
rtsp_fd_fr/src/host/: CMakeLists.txt  pipeline_host_test.cpp  play_mjpeg.cpp  stream_cmd_client_test.cpp  test_libusb_fdfr.cpp
rtsp_fd_fr/src/host/no_opencv/: CMakeLists.txt
rtsp_fd_fr/src/host/python/: README.md  capture.py  display.py  main.py  stream.py  test.py  visualize.py
rtsp_fd_fr/src/libusb_inference_client/: CMakeLists.txt  README.md  libusb_inference_client.cpp  libusb_inference_client.hpp  libusb_inference_client_opencv.cpp
rtsp_fd_fr/src/libusb_inference_server/: CMakeLists.txt  README.md  conf.json  libusb_inference_server.cpp
rtsp_fd_fr/src/yolo_hisi/: CMakeLists.txt  main.cpp  yolo.cpp  yolo.hpp
rtsp_fd_fr/src/yolo_hisi/bm-mpp-system/: CMakeLists.txt  README.md
rtsp_fd_fr/src/yolo_host/: yolo_host.cpp
rtsp_fd_fr/src/yolo_nnm/: yolo_nnm.cpp
rtsp_fd_fr/tools/plc/: cppdiscovery.py  pipegenerator.py  pipeparser.py  plc.py
usb_api/1880/: CMakeLists.txt  bm1880_usb.c  bm1880_usb.h  bm1880_usb_test.c
(+292 files in other folders)
